Change return value for GET event's list methods from EventResponse to EventListDto